Add endpoint de cadastro de medico

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.34</version>
         </dependency>
+        <!-- Validacao de campos -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
