adicao crud pacientes

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-hibernate-validator</artifactId>
         </dependency>
+        <!-- documentacao -->
     </dependencies>
 
     <build>
